Use cyan for remote machines

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,7 +93,7 @@ set -g status-fg colour8
 # example: 1: bash
 set -g window-status-format " #I: #W "
 set -g window-status-current-format " #I: #W* "
-setw -g window-status-current-bg green
+setw -g window-status-current-bg cyan
 setw -g window-status-current-fg black
 setw -g window-status-bg black
-setw -g window-status-fg green
+setw -g window-status-fg cyan
