Add dotfiles on Arch Linux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,17 +18,17 @@ set -g prefix `
 bind ` send-prefix
 
 # Enable mouse functions
-#set -g mouse on
+set -g mouse on
 # Mouse scroll up to enter copy mode
 #   scroll down to bottom to exit copy mode
 #   (does not conflict with scrolling in Vim)
-#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-#bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Enable window manager title
 set -g set-titles on
 # Set the window manager title
-set -g set-titles-string "TMUX - #T"
+set -g set-titles-string "#T"
 
 # Copy mode
 #   1. [ to enter copy mode
@@ -39,7 +39,7 @@ setw -g mode-keys vi
 # v to select (the same as Space)
 bind -t vi-copy 'v' begin-selection
 # Y to copy without leaving copy mode (contrary to Enter)
-#bind -t vi-copy 'y' copy-selection -x
+bind -t vi-copy 'y' copy-selection -x
 # Copy to X clipboard using `xsel`
 # bind-key -t vi-copy y copy-pipe "xsel -i -p -b"
 # bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
@@ -93,7 +93,7 @@ set -g status-fg colour8
 # example: 1: bash
 set -g window-status-format " #I: #W "
 set -g window-status-current-format " #I: #W* "
-setw -g window-status-current-bg cyan
+setw -g window-status-current-bg green
 setw -g window-status-current-fg black
 setw -g window-status-bg black
-setw -g window-status-fg cyan
+setw -g window-status-fg green
