--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@ emacs/.emacs.d/elpa/archives/*
 emacs/.emacs.d/url/*
 emacs/.emacs.d/auto-save-list/*
 emacs/.emacs.d/backup/*
+emacs/.emacs.d/image-dired/*
+emacs/.emacs.d/var/*
 emacs/.emacs.d/saved-places
 emacs/.emacs.d/bookmarks
-emacs/.emacs.d/image-dired/*
 emacs/.emacs.d/projectile*
 
 # Ranger
