Change prefix to C-x (Emacs-like)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,8 +14,8 @@ set -g default-terminal "xterm-256color"
 
 # Set prefix to tick ` and type twice tick `` to enter tick
 unbind C-b
-set -g prefix `
-bind ` send-prefix
+set -g prefix C-x
+bind C-x send-prefix
 
 # Enable mouse functions
 set -g mouse on
