Copy to system clipboard on Mac

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,6 +45,10 @@ bind -t vi-copy 'y' copy-selection -x
 # bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 # Copy to X clipboard alternative:
 #   Shift+mouse select and Shift-Ctrl-C to copy Shift-Ctrl-V to paste
+# Mac OS only: Enter to copy to system clipboard
+#   brew install reattach-to-user-namespace
+if-shell "uname | grep -q Darwin" \
+  "bind-key -t vi-copy Enter copy-pipe \"reattach-to-user-namespace pbcopy\""
 
 # Start windows and panes from 1, not 0 by default
 set -g base-index 1
