Fix status bar color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -91,7 +91,7 @@ bind R source-file ~/.tmux.conf
 set -g status-right ""
 
 # Status line
-set -g status-bg black
+set -g status-bg default
 set -g status-fg colour8
 # Window status
 # example: 1: bash
@@ -99,5 +99,5 @@ set -g window-status-format " #I: #W "
 set -g window-status-current-format " #I: #W* "
 setw -g window-status-current-bg green
 setw -g window-status-current-fg black
-setw -g window-status-bg black
+setw -g window-status-bg default
 setw -g window-status-fg green
