--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -97,7 +97,7 @@ set -g status-fg colour8
 # example: 1: bash
 set -g window-status-format " #I: #W "
 set -g window-status-current-format " #I: #W* "
-setw -g window-status-current-bg green
+setw -g window-status-current-bg white
 setw -g window-status-current-fg black
 setw -g window-status-bg default
-setw -g window-status-fg green
+setw -g window-status-fg white
