--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,10 +12,10 @@
 # Fix Gnome Terminal color schemes
 set -g default-terminal "xterm-256color"
 
-# Set prefix to tick ` and type twice tick `` to enter tick
+# Set new prefix and type twice to literaly enter the prefix
 unbind C-b
-set -g prefix C-x
-bind C-x send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 # Enable mouse functions
 set -g mouse on
