--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,8 +47,10 @@ bind -t vi-copy 'y' copy-selection -x
 #   Shift+mouse select and Shift-Ctrl-C to copy Shift-Ctrl-V to paste
 # Mac OS only: Enter to copy to system clipboard
 #   brew install reattach-to-user-namespace
+# if-shell "uname | grep -q Darwin" \
+  # "bind-key -t vi-copy Enter copy-pipe \"reattach-to-user-namespace pbcopy\""
 if-shell "uname | grep -q Darwin" \
-  "bind-key -t vi-copy Enter copy-pipe \"reattach-to-user-namespace pbcopy\""
+  "set-option -g default-command \"reattach-to-user-namespace -l bash\""
 
 # Start windows and panes from 1, not 0 by default
 set -g base-index 1
