Add Ubuntu theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -94,7 +94,7 @@ set -g status-right ""
 
 # Status line
 set -g status-bg default
-set -g status-fg colour8
+set -g status-fg white
 # Window status
 # example: 1: bash
 set -g window-status-format " #I: #W "
@@ -103,3 +103,7 @@ setw -g window-status-current-bg white
 setw -g window-status-current-fg black
 setw -g window-status-bg default
 setw -g window-status-fg white
+
+# Theme on specific machine
+if-shell "echo $MACHINE | grep -q ubuntu" \
+    'set -g status-fg magenta; setw -g window-status-fg magenta; setw -g window-status-current-bg magenta; setw -g window-status-current-fg colour13; set -g pane-border-fg magenta; set -g pane-active-border-fg white'
