tmux theme for cmlab

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -107,3 +107,5 @@ setw -g window-status-fg white
 # Theme on specific machine
 if-shell "echo $MACHINE | grep -q ubuntu" \
     'set -g status-fg magenta; setw -g window-status-fg magenta; setw -g window-status-current-bg magenta; setw -g window-status-current-fg colour13; set -g pane-border-fg magenta; set -g pane-active-border-fg white'
+if-shell "echo $MACHINE | grep -q cmlab" \
+    'set -g status-fg white; setw -g window-status-fg black; setw -g window-status-current-bg white; setw -g window-status-current-fg black; set -g pane-border-fg white; set -g pane-active-border-fg blue'
