--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ vim/.vim/.netrwhist
 ranger/.config/ranger/history
 ranger/.config/ranger/bookmarks
 ranger/.config/ranger/tagged
+
+# Mac
+.DS_Store
+Icon*
